UHF-1673: Fix visual bugs on sidebar menu, add focus that is similar to desktop navigation, fix javascript bugs from the menu toggle, fix external link spacing on text content

--- a/src/scss/components/paragraphs/_link.scss
+++ b/src/scss/components/paragraphs/_link.scss
@@ -13,9 +13,6 @@
 
   // Links inside the paragraph content area
   .paragraph-content .link {
-    // Add extra margin around the link paragraph.
-    margin: $spacing 0;
-
     .link__content {
       @include breakpoint($breakpoint-s) {
         padding-left: $spacing-quadruple;
